--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.7",
+        "chart.js": "^4.5.0",
+        "feather-icons": "^4.29.2",
+        "flatpickr": "^4.6.13",
+        "jsvectormap": "^1.7.0",
+        "simplebar": "^6.3.2"
     }
 }
