--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
     "private": true,
     "type": "module",
     "scripts": {
@@ -7,19 +6,10 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
-    },
-    "dependencies": {
-        "bootstrap": "^5.3.7",
-        "chart.js": "^4.5.0",
-        "feather-icons": "^4.29.2",
-        "flatpickr": "^4.6.13",
-        "jsvectormap": "^1.7.0",
-        "simplebar": "^6.3.2"
+        "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
+        "laravel-vite-plugin": "^0.7.2",
+        "sass": "^1.56.1",
+        "vite": "^4.0.0"
     }
 }
